Remove about Rename _data/endpoints

--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -24,7 +24,7 @@
                         </a>
 
                         <ul class="dropdown-menu" role="menu">
-                            {% for endpoint in site.data.base_endpoints %}
+                            {% for endpoint in site.data.endpoints %}
                                 {% if endpoint.icon %}
                                     {% assign icon = endpoint.icon %}
                                 {% else %}
