Fix CSS and JS URLs in docs

--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <meta name="description" content="{{ site.description }}" />
         <title>{{ site.title }} | {{ page.title }}</title>
-        <link rel="stylesheet" href="{{ '/assets/css/bootstrap.min.css' | relative_url }}">
-        <link rel="stylesheet" href="{{ '/assets/css/simplex.min.css' | relative_url }}">
-        <link rel="stylesheet" href="{{ '/assets/css/font-awesome.min.css' | relative_url }}">
-        <script src="{{ '/assets/js/jquery-3.1.1.min.js' | relative_url }}" charset="utf-8"></script>
-        <script src="{{ '/assets/js/bootstrap.min.js' | relative_url }}" charset="utf-8"></script>
+        <link rel="stylesheet" href="{{ '/assets/css/bootstrap.min.css' | absolute_url }}">
+        <link rel="stylesheet" href="{{ '/assets/css/simplex.min.css' | absolute_url }}">
+        <link rel="stylesheet" href="{{ '/assets/css/font-awesome.min.css' | absolute_url }}">
+        <script src="{{ '/assets/js/jquery-3.1.1.min.js' | absolute_url }}" charset="utf-8"></script>
+        <script src="{{ '/assets/js/bootstrap.min.js' | absolute_url }}" charset="utf-8"></script>
     </head>
     <body>
         <nav class="navbar navbar-default" role="navigation">
