--- a/docs/_layouts/base.html
+++ b/docs/_layouts/base.html
@@ -7,18 +7,23 @@
         <link rel="stylesheet" href="{{ site.github.url }}/assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="{{ site.github.url }}/assets/css/simplex.min.css">
         <link rel="stylesheet" href="{{ site.github.url }}/assets/css/font-awesome.min.css">
+        <style media="screen">
+            body {
+                padding-top: 70px;
+            }
+        </style>
         <script src="{{ site.github.url }}/assets/js/jquery-3.1.1.min.js" charset="utf-8"></script>
         <script src="{{ site.github.url }}/assets/js/bootstrap.min.js" charset="utf-8"></script>
     </head>
     <body>
-        <nav class="navbar navbar-default" role="navigation">
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">{{ site.title }}</a>
+                    <a class="navbar-brand" href="{{ site.github.url }}/">{{ site.title }}</a>
                 </div>
 
                 <ul class="nav navbar-nav">
-                    <li><a href="./"><i class="fa fa-1x fa-home"></i> Home</a></li>
+                    <li><a href="{{ site.github.url }}/"><i class="fa fa-1x fa-home"></i> Home</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown navbar-link" data-toggle="dropdown">
                             <i class="fa fa-1x fa-link"></i> Endpoints <span class="caret"></span>
@@ -31,7 +36,14 @@
                                 {% else %}
                                     {% assign icon = 'info' %}
                                 {% endif %}
-                                <li><a href="#"><i class="fa fa-1x fa-fw fa-{{ icon }}"></i> {{ endpoint.title }}</a></li>
+
+                                {% if endpoint.name == page.page %}
+                                    {% assign class = 'active' %}
+                                {% else %}
+                                    {% assign class = '' %}
+                                {% endif %}
+
+                                <li class="{{ class }}"><a href="{{ site.github.url }}/{{ endpoint.name }}"><i class="fa fa-1x fa-fw fa-{{ icon }}"></i> {{ endpoint.title }}</a></li>
                             {% endfor %}
                         </ul>
                     </li>
@@ -45,10 +57,12 @@
 
         <div class="container-fluid">
             <div class="page-header">
-                <h1>DecAPI - {{ page.page }}</h1>
+                <h1>DecAPI - Documentation - {{ page.title }}</h1>
             </div>
 
-            {{ content }}
+            <div class="jumbotron">
+                {{ content }}
+            </div>
         </div>
     </body>
 </html>
