--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -13,3 +13,19 @@ html, body{height:100%; margin:0;padding:0}
   float:none;
   margin:0 auto;
 }
+
+.mt-1 {
+    margin-top: 1em;
+}
+
+.mt-2 {
+    margin-top: 2em;
+}
+
+.mt-3 {
+    margin-top: 3em;
+}
+
+.mt-4 {
+    margin-top: 4em;
+}
