--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -7,6 +7,10 @@ html, body{height:100%; margin:0;padding:0}
   padding: 0;
 }
 
+.mw-90 {
+    max-width: 90%;
+}
+
 .row-fluid {height: 100%; display:table-cell; vertical-align: middle;}
 
 .centering {
@@ -14,18 +18,3 @@ html, body{height:100%; margin:0;padding:0}
   margin:0 auto;
 }
 
-.mt-1 {
-    margin-top: 1em;
-}
-
-.mt-2 {
-    margin-top: 2em;
-}
-
-.mt-3 {
-    margin-top: 3em;
-}
-
-.mt-4 {
-    margin-top: 4em;
-}
